@startuml

class User {
  - id: int
  - name: string
  - email: string
  - passwordHash: string
  - createdAt: datetime
  + getId(): int
  + getName(): string
  + getEmail(): string
}

class UserManager {
  + register(name, email, password): User
  + login(email, password): User
  + logout(): void
  - checkValidation(name, email, password): array
  + checkEditValidation(name, email): array
}

class SearchManager {
  + searchThreadTitle(keyword, limit, offset): Thread[]
  + searchThreadUser(userName, limit, offset): Thread[]
  - buildThreads(rows): Thread[]
}

abstract class Post {
  - id: int
  - content: string
  - userId: int
  - createdAt: datetime
  + getId(): int
  + getContent(): string
  + getUserId(): int
  + getCreatedAt(): string
  + canEdit(sessionUserId, isAdmin): bool
  + update(content): void
  + delete(): void
}

class Thread {
  - title: string
  - userName: string
  - responseCount: int
  + getTitle(): string
  + getAuthorName(): string
  + getResponseCount(): int
  + setResponseCount(count): void
  + update(title, content): void
  + delete(): void
  + {static} create(userId, title, content): Thread
  + {static} validate(title, content): array
  + {static} getAllWithResponseCount(limit, offset): Thread[]
  + {static} findById(id): ?Thread
}

class Response {
  - userName: string
  - threadId: int
  + getUserName(): string
  + getThreadId(): int
  + update(content): void
  + delete(): void
  + {static} create(userId, threadId, content): Response
  + {static} validateResponse(content): array
  + {static} getByThreadId(threadId, limit): Response[]
  + {static} findById(id): ?Response
}

class Admin {
  + updateUser(targetUserId, name, email): void
  + deleteUser(targetUserId): void
  + updatePost(post, content): void
  + deletePost(post): void
  + {static} isAdmin(userId): bool
  + {static} findById(userId): ?Admin
}

class Reaction {
  - id: int
  - postType: string
  - postId: int
  - userId: int
  - type: string
  - createdAt: datetime
  + {static} toggle(postType, postId, userId, type): bool
  + {static} countByPost(postType, postId, type): int
  + {static} hasReacted(postType, postId, userId, type): bool
  + {static} getByPostIds(postType, postIds, userId): array
}

User ..> Post : 作成
Post --> Reaction : リアクション
Thread --|> Post
Response --|> Post
Admin --|> User
UserManager ..> User : 作成
SearchManager ..> Thread : 検索

@enduml